Transformation of POC into target project - part 2